- chalice new-project - DB scaffolding  - PUT endpoint scaffolding  - swagger implementation in progress
