# REST/asteroidDavis-timing-1.0-swagger.yaml
@@ -4,10 +4,10 @@ info:
   title: 'Timing'
   description: ' timing elements of a 1D signal'
 paths: 
-  '/power/timing/${observation_name}':
-    summary: '1 timing vector
+    '/power/timing/${observationName}':
+    summary: '1 timing vector'
     parameters:
-      - $ref: "#/components/parameters/observation_name"
+      - $ref: "#/components/parameters/observationName"
     get:
       description: 'get a stored observation in a timing object'
       parameters: []
@@ -18,7 +18,10 @@ paths:
           description: 'the observation was not found'
     put:
       description: 'store an observation with its timing object'
-      parameters: []
+      parameters:
+        - $ref: "#/components/parameters/samples_per_second"
+      requestBody:
+        $ref: "#/components/requestBodies/timeAndVector"
       responses:
         200:
           description: 'the observation was stored'
@@ -41,21 +44,36 @@ paths:
           description: 'the timing object was transmitted'
         500:
           description: 'outage'
-    
-    
-      
-    
+
+
 servers:
   # Added by API Auto Mocking Plugin
   - description: SwaggerHub API Auto Mocking
     url: https://virtserver.swaggerhub.com/asteroidDavis/timing/1.0
     
 components:
-  schemas: {}
+  schemas:
+    samplesPerSecond:
+        type: number
+        minimum: 0
+        exclusiveMinimum: true
+    numberOfPoints:
+      type: integer
+      minimum: 1
+
+  requestBodies:
+    timeAndVector:
+      description:
+      required:
+      content:
+        application/json:
+          allOf:
+            - $ref: "#/components/schemas/samplesPerSecond"
+            - $ref: "#/components/schemas/numberOfPoints"
     
   parameters:
-    observation_name:
-      name: observation_name
+    observationName:
+      name: observation name
       required: true
       in: path
       description: "a unique id describing 1 observation"
